--- a/lodpyramid.ipynb
+++ b/lodpyramid.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib nbagg\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -204,6 +204,216 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Generate histogram\n",
+    "\n",
+    "For float16, generate the counts for each value (and clip to finite ones).\n",
+    "This also works for uint16.\n",
+    "\n",
+    "For 32/64 bits, normal histogramming needed.\n",
+    "\n",
+    "Store histogram as `counts` and `values` along with the data: `level0_histo/counts` and `level0_histo/values`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_float16_counts(data, chunk_shape=None):\n",
+    "    \"\"\"Return counts of occurence of float16 values.\n",
+    "\n",
+    "    This allows fast histograming of float16.\n",
+    "\n",
+    "    :param Union[h5py.Dataset,numpy.ndarray] data:\n",
+    "    :param Union[None,List[int]] chunk_shape:\n",
+    "    :rtype: numpy.ndarray\n",
+    "    \"\"\"\n",
+    "    # TODO support nD data and nD chunk_shape\n",
+    "    assert data.dtype == numpy.float16\n",
+    "    assert data.ndim >= 2\n",
+    "\n",
+    "    if chunk_shape is None:\n",
+    "        chunk_shape = data.shape[:2]\n",
+    "    assert len(chunk_shape) == 2\n",
+    "\n",
+    "    counts = numpy.zeros((2**16,), dtype=numpy.int64)\n",
+    "\n",
+    "    for row in range(0, data.shape[0], chunk_shape[0]):\n",
+    "        for col in range(0, data.shape[1], chunk_shape[1]):\n",
+    "            chunk = data[row:row+chunk_shape[0], col:col+chunk_shape[1]]\n",
+    "            uint16_view = chunk.view(dtype=numpy.uint16)\n",
+    "            uint16_view.shape = -1\n",
+    "            counts = counts + numpy.bincount(uint16_view, minlength=counts.size)\n",
+    "    return counts\n",
+    "\n",
+    "\n",
+    "def get_finite_counts(*args, **kwargs):\n",
+    "    \"\"\"Returns values and counts\n",
+    "\n",
+    "    :return: (values, counts)\n",
+    "    :rtype: List[numpy.ndarray,numpy.ndarray]\n",
+    "    \"\"\"\n",
+    "    # TODO values and finite_mask can be cached\n",
+    "    counts = get_float16_counts(*args, **kwargs)\n",
+    "    values = numpy.arange(2**16, dtype=numpy.uint16).view(dtype=numpy.float16)\n",
+    "\n",
+    "    # Filter-out NaN and inf\n",
+    "    finite_mask = numpy.isfinite(values)\n",
+    "    values = values[finite_mask]\n",
+    "    counts = counts[finite_mask]\n",
+    "\n",
+    "    # Sort returned values\n",
+    "    indices = numpy.argsort(values)\n",
+    "    return numpy.take(values, indices), numpy.take(counts, indices)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "level6\n",
+      "level5\n",
+      "level4\n",
+      "level3\n",
+      "level2\n",
+      "level1\n",
+      "level0\n",
+      "CPU times: user 2min 59s, sys: 2min 9s, total: 5min 8s\n",
+      "Wall time: 5min 49s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Populate levels\n",
+    "with h5py.File(\"/media/nvme/tvincent/testhdf5.h5\", mode=\"a\") as f:\n",
+    "    for level in range(6, -1, -1):\n",
+    "        level_name = 'level%d' % level\n",
+    "        print(level_name)\n",
+    "        group = f.create_group('%s_histo' % level_name)\n",
+    "        values, counts = get_finite_counts(f[level_name], chunk_shape=(2048, 2048))\n",
+    "        group['counts'] = counts\n",
+    "        group['values'] = values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple\n",
+    "\n",
+    "Stats = namedtuple('Stats', ('min_', 'max_', 'mean', 'std', 'sum_', 'counts'))\n",
+    "\n",
+    "def get_stats_from_histo(values, counts):\n",
+    "    \"\"\"Returns basic stats indicator computed from histogram\n",
+    "\n",
+    "    :param numpy.ndarray values:\n",
+    "    :param numpy.ndarray counts:\n",
+    "    :rtype: Stats\n",
+    "    \"\"\"\n",
+    "    subset = values[counts != 0]\n",
+    "    min_, max_ = subset[0], subset[-1]\n",
+    "    nbcounts = numpy.sum(counts, dtype=numpy.int64)\n",
+    "    sum_ = numpy.sum(values * counts, dtype=numpy.float64)\n",
+    "    mean = sum_ / nbcounts\n",
+    "    std = numpy.sqrt(numpy.sum(counts * (values.astype(numpy.float64) - mean)**2) / nbcounts)\n",
+    "    return Stats(\n",
+    "        min_=subset[0],\n",
+    "        max_=subset[-1],\n",
+    "        sum_=sum_,\n",
+    "        counts=nbcounts,\n",
+    "        mean=mean,\n",
+    "        std=std,\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 446 ms, sys: 121 ms, total: 568 ms\n",
+      "Wall time: 566 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Stats(min_=-0.0915, max_=0.3965, mean=-0.003922233379319872, std=0.021244026200547956, sum_=-368206.4086472988, counts=93876721)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "with h5py.File(\"/media/nvme/tvincent/testhdf5.h5\", mode=\"r\") as f:\n",
+    "    data = f['level4']\n",
+    "    values, counts = get_finite_counts(data)\n",
+    "    stats = get_stats_from_histo(values, counts)\n",
+    "\n",
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.66 s, sys: 124 ms, total: 6.78 s\n",
+      "Wall time: 6.78 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Stats(min_=-0.0915, max_=0.3965, mean=-0.003922233379319872, std=0.021244026200547928, sum_=-368206.4086472988, counts=93876721)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "with h5py.File(\"/media/nvme/tvincent/testhdf5.h5\", mode=\"r\") as f:\n",
+    "    data = f['level4'][()]\n",
+    "\n",
+    "Stats(\n",
+    "        min_=numpy.min(data),\n",
+    "        max_=numpy.max(data),\n",
+    "        sum_=numpy.sum(data, dtype=numpy.float64),\n",
+    "        counts=data.size,\n",
+    "        mean=numpy.mean(data, dtype=numpy.float64),\n",
+    "        std=numpy.std(data, dtype=numpy.float64),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Update pyramid in live"
    ]
   },
@@ -285,42 +495,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "125.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "1000./2**14*2048"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.124641418457031e-08"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.173/2048**2"
+    "\n",
+    "# Raw image with NaN or 0\n",
+    "# Fill level0 over time\n",
+    "# Update other levels from level0\n",
+    "# Notify?\n",
+    "\n",
+    "\n",
+    "# Data/colormap update:\n",
+    "# Store a histogram: edges, count for each level and use it for autoscale colormap.\n",
+    "#   - Which number of bins?\n",
+    "#   - float16 specific histo using count of each possible value\n",
+    "#     (easy generation by using binary representation as index)\n",
+    "# Send DATA event each time displayed level change? to update colormap/histo/profile?"
    ]
   },
   {
